--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My-Components</title>
   </head>
   <body>
-    <div id="root"></div>
+  <div id="root" style="display: flex;background-color: white;  flex-direction: column;height: 100vh;box-sizing: border-box;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
